--- a/Assets/settings.json
+++ b/Assets/settings.json
@@ -1,5 +1,5 @@
 {
-    "StartInLobby": false,
+    "StartInLobby": true,
     "VREMAddress": "127.0.0.1:4567",
     "SpotsEnabled": false,
     "FloorLogoEnabled": true,
