--- a/Assets/settings.json
+++ b/Assets/settings.json
@@ -4,7 +4,7 @@
     "SpotsEnabled": false,
     "FloorLogoEnabled": true,
     "CeilingLogoEnabled": true,
-    "PlaygroundEnabled": false,
+    "PlaygroundEnabled": true,
     "RequestExhibitions": false,
     "exhibitionIds": []
 }
