--- a/Assets/settings.json
+++ b/Assets/settings.json
@@ -2,7 +2,8 @@
   "StartInLobby": true,
   "VREMAddress": "http://127.0.0.1:4567",
   "SpotsEnabled": false,
-  "FloorLogoEnabled": true,
+  "LobbyFloorLogoEnabled": true,
+  "LobbyCeilingLogoEnabled": true,
   "CeilingLogoEnabled": true,
   "PlaygroundEnabled": true,
   "RequestExhibitions": false,
