Removing lobby if not used

--- a/Assets/settings.json
+++ b/Assets/settings.json
@@ -1,5 +1,5 @@
 {
-  "StartInLobby": true,
+  "StartInLobby": false,
   "VREMAddress": "http://127.0.0.1:4567",
   "SpotsEnabled": false,
   "LobbyFloorLogoEnabled": true,
