--- a/Assets/settings.json
+++ b/Assets/settings.json
@@ -1,6 +1,6 @@
 {
   "StartInLobby": false,
-  "VREMAddress": "http://10.34.58.170:4567",
+  "VREMAddress": "http://localhost:4567",
   "SpotsEnabled": false,
   "LobbyFloorLogoEnabled": true,
   "LobbyCeilingLogoEnabled": true,
@@ -8,6 +8,6 @@
   "PlaygroundEnabled": true,
   "RequestExhibitions": false,
   "exhibitionIds": [
-    "5c2c65934d7ec8ccb89bef9e"
+    "fantasybasel"
   ]
 }
