fixing ex-loading with corresponding change to vrem

--- a/Assets/settings.json
+++ b/Assets/settings.json
@@ -7,7 +7,5 @@
   "CeilingLogoEnabled": true,
   "PlaygroundEnabled": true,
   "RequestExhibitions": false,
-  "exhibitionIds": [
-    "fantasybasel"
-  ]
+  "exhibitionIds": "fantasybasel"
 }
