Further refactoring and commenting.

--- a/Assets/settings.json
+++ b/Assets/settings.json
@@ -8,5 +8,5 @@
   "WallTimerCount": 240,
   "PlaygroundEnabled": true,
   "RequestExhibitions": false,
-  "exhibitionId": "60d33e00872800279d55a375"
+  "ExhibitionId": "60f6c6d93578e5226f507630"
 }
