--- a/Assets/settings.json
+++ b/Assets/settings.json
@@ -1,5 +1,5 @@
 {
-  "VREMAddress": "http://127.0.0.1:4545",
+  "VremAddress": "http://127.0.0.1:4545",
   "StartInLobby": true,
   "SpotsEnabled": false,
   "LobbyFloorLogoEnabled": true,
