--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "ch.unibas.dmi.dbis.vrem.client": "ssh://git@github.com/simonpeterhans/vrem-unity-interface.git#main",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.collab-proxy": "1.7.1",
