--- a/Assets/settings.json
+++ b/Assets/settings.json
@@ -1,11 +1,17 @@
 {
   "VremAddress": "http://127.0.0.1:4545",
+  "WallTimerCount": 240,
   "StartInLobby": true,
   "SpotsEnabled": false,
   "LobbyFloorLogoEnabled": true,
   "LobbyCeilingLogoEnabled": true,
   "CeilingLogoEnabled": true,
-  "WallTimerCount": 240,
   "PlaygroundEnabled": true,
-  "ExhibitionId": "60f6c6d93578e5226f507630"
+  "ExhibitionMode": 1,
+  "ExhibitionId": "612f7ff8658ab42b99cd81ca",
+  "GenerationSettings": {
+    "height": 1,
+    "width": 16,
+    "seed": 0
+  }
 }
