--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
-    "ch.unibas.dmi.dbis.vrem.client": "ssh://git@github.com/simonpeterhans/vrem-unity-interface.git#main",
+    "ch.unibas.dmi.dbis.vrem.client": "https://github.com/simonpeterhans/vrem-unity-interface.git#main",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.collab-proxy": "1.7.1",
+    "com.unity.collab-proxy": "1.9.0",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.4",
