--- a/Assets/settings.json
+++ b/Assets/settings.json
@@ -1,5 +1,5 @@
 {
-  "VremAddress": "http://127.0.0.1:4546",
+  "VremAddress": "http://127.0.0.1:4545",
   "WallTimerCount": 240,
   "StartInLobby": true,
   "SpotsEnabled": false,
@@ -14,6 +14,7 @@
     "width": 16,
     "seed": 0,
     "numEpochs": 25,
-    "buttonMode": 1
+    "buttonMode": 1,
+    "backButton": false
   }
 }
