--- a/Assets/settings.json
+++ b/Assets/settings.json
@@ -1,12 +1,12 @@
 {
-  "VremAddress": "http://127.0.0.1:4545",
+  "VremAddress": "http://localhost:4545",
   "WallTimerCount": 240,
   "StartInLobby": true,
   "SpotsEnabled": false,
   "LobbyFloorLogoEnabled": true,
   "LobbyCeilingLogoEnabled": true,
   "CeilingLogoEnabled": true,
-  "PlaygroundEnabled": true,
+  "PlaygroundEnabled": false,
   "ExhibitionMode": 1,
   "ExhibitionId": "613c8f6cbdd0f735b1eb8b9a",
   "GenerationSettings": {
