--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
-    "ch.unibas.dmi.dbis.vrem.client": "https://github.com/VIRTUE-DBIS/vrem-unity-interface.git#main",
+    "ch.unibas.dmi.dbis.vrem.client": "https://github.com/VIRTUE-DBIS/vrem-unity-interface.git#all-dlls",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.collab-proxy": "1.13.5",
+    "com.unity.collab-proxy": "1.17.2",
     "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.11",
-    "com.unity.ide.vscode": "1.2.4",
-    "com.unity.test-framework": "1.1.29",
+    "com.unity.ide.visualstudio": "2.0.16",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.5.6",
     "com.unity.ugui": "1.0.0",
